testsuite/poke.pkl/printf-diag-3.pk
/* { dg-do compile} */

printf "foo", 12, 32; /* { dg-error "" } */
